all CSS done, and working through if statement to change color to match time. changing all ID's

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <!-- link to jquery library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
@@ -34,67 +34,67 @@
     <div class="container">    
       <!-- repeat this until 5pm, can add styling later -->
       <div id="nine" class="row">
-        <div class="col-md-1">
+        <div class="hour col-md-1">
           9 am          
         </div>
         <textarea class="col-md-10 addEvent"></textarea>
-        <button class="btn col-md-1">Save</button>
+        <button class="btn saveBtn col-md-1">Save</button>
       </div>   
       <div id="ten" class="row">
-        <div class="col-md-1">
+        <div class="hour col-md-1">
           10 am          
         </div>
         <textarea class="col-md-10 addEvent"></textarea>
-        <button class="btn col-md-1">Save</button>
+        <button class="btn saveBtn col-md-1">Save</button>
       </div>  
       <div id="eleven" class="row">
-        <div class="col-md-1">
+        <div class="hour col-md-1">
           11 am          
         </div>
         <textarea class="col-md-10 addEvent"></textarea>
-        <button class="btn col-md-1">Save</button>
+        <button class="btn saveBtn col-md-1">Save</button>
       </div>  
       <div id="twelve" class="row">
-        <div class="col-md-1">
+        <div class="hour col-md-1">
           12 pm          
         </div>
         <textarea class="col-md-10 addEvent"></textarea>
-        <button class="btn col-md-1">Save</button>
+        <button class="btn saveBtn col-md-1">Save</button>
       </div>  
       <div id="one" class="row">
-        <div class="col-md-1">
+        <div class="hour col-md-1">
           1 pm          
         </div>
         <textarea class="col-md-10 addEvent"></textarea>
-        <button class="btn col-md-1">Save</button>
+        <button class="btn saveBtn col-md-1">Save</button>
       </div>  
       <div id="two" class="row">
-        <div class="col-md-1">
+        <div class="hour col-md-1">
           2 pm          
         </div>
         <textarea class="col-md-10 addEvent"></textarea>
-        <button class="btn col-md-1">Save</button>
+        <button class="btn saveBtn col-md-1">Save</button>
       </div>  
       <div id="three" class="row">
-        <div class="col-md-1">
+        <div class="hour col-md-1">
           3 pm          
         </div>
         <textarea class="col-md-10 addEvent"></textarea>
-        <button class="btn col-md-1">Save</button>
+        <button class="btn saveBtn col-md-1">Save</button>
       </div>  
       <div id="four" class="row">
-        <div class="col-md-1">
+        <div class="hour col-md-1">
           4 pm          
         </div>
         <textarea class="col-md-10 addEvent"></textarea>
-        <button class="btn col-md-1">Save</button>
+        <button class="btn saveBtn col-md-1">Save</button>
       </div>  
       <div id="five" class="row">
-        <div class="col-md-1">
+        <div class="hour col-md-1">
           5 pm          
         </div>
         <textarea class="col-md-10 addEvent"></textarea>
-        <button class="btn col-md-1">Save</button>
+        <button class="btn saveBtn col-md-1">Save</button>
       </div>  
 
       
