changed all id's from a string to a number

--- a/index.html
+++ b/index.html
@@ -33,63 +33,63 @@
     </header>
     <div class="container">    
       <!-- repeat this until 5pm, can add styling later -->
-      <div id="nine" class="row">
+      <div id="9" class="row">
         <div class="hour col-md-1">
           9 am          
         </div>
         <textarea class="col-md-10 addEvent"></textarea>
         <button class="btn saveBtn col-md-1">Save</button>
       </div>   
-      <div id="ten" class="row">
+      <div id="10" class="row">
         <div class="hour col-md-1">
           10 am          
         </div>
         <textarea class="col-md-10 addEvent"></textarea>
         <button class="btn saveBtn col-md-1">Save</button>
       </div>  
-      <div id="eleven" class="row">
+      <div id="11" class="row">
         <div class="hour col-md-1">
           11 am          
         </div>
         <textarea class="col-md-10 addEvent"></textarea>
         <button class="btn saveBtn col-md-1">Save</button>
       </div>  
-      <div id="twelve" class="row">
+      <div id="12" class="row">
         <div class="hour col-md-1">
           12 pm          
         </div>
         <textarea class="col-md-10 addEvent"></textarea>
         <button class="btn saveBtn col-md-1">Save</button>
       </div>  
-      <div id="one" class="row">
+      <div id="13" class="row">
         <div class="hour col-md-1">
           1 pm          
         </div>
         <textarea class="col-md-10 addEvent"></textarea>
         <button class="btn saveBtn col-md-1">Save</button>
       </div>  
-      <div id="two" class="row">
+      <div id="14" class="row">
         <div class="hour col-md-1">
           2 pm          
         </div>
         <textarea class="col-md-10 addEvent"></textarea>
         <button class="btn saveBtn col-md-1">Save</button>
       </div>  
-      <div id="three" class="row">
+      <div id="15" class="row">
         <div class="hour col-md-1">
           3 pm          
         </div>
         <textarea class="col-md-10 addEvent"></textarea>
         <button class="btn saveBtn col-md-1">Save</button>
       </div>  
-      <div id="four" class="row">
+      <div id="16" class="row">
         <div class="hour col-md-1">
           4 pm          
         </div>
         <textarea class="col-md-10 addEvent"></textarea>
         <button class="btn saveBtn col-md-1">Save</button>
       </div>  
-      <div id="five" class="row">
+      <div id="17" class="row">
         <div class="hour col-md-1">
           5 pm          
         </div>
